style.css
.card {

    background-color: #1494de!important; 
    color: white;
    
}

.jumbotron {
    background-color: #1494de!important; 
    color:white;
    margin-top:20px;
    
}

.navbar {

    background-color: black;
    color: white;
    
}


#start {
    margin-top:20px;
}

#city {
    font-weight: 600;
    text-align: center;
}

#info {
    font-weight: 600;
    text-align: center;
}

body {

    overflow: hidden;
}

@media screen and (max-width: 480px) {

.card {

    background-color: #1494de!important; 
    color: white;

    margin-top:20px;
    
}

}

